Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-20199

Crash when pasting QML after switching sessions

XMLWordPrintable

    • a2c362af319af77864456005046ebd09d3ceb41f

      Steps to reproduce:

      1. Open a session.
      2. Copy a QML snippet from somewhere (e.g. https://bugreports.qt.io/browse/QTBUG-67145).
      3. Switch to another session where a Qt Quick application is open so that you can paste into its main.qml.
      4. Quickly paste the QML into main.qml and it will crash. This has to be done while the project is being read ('Reading project "qtdeclarative"' in my case), before it parses QML and C++ files.
      1  QVector<TextEditor::TextMark * __ptr64>::removeAll                                                                                qvector.h                      164  0x7ff952df5405 
      2  std::_Func_impl_no_alloc<<lambda_fb60757c61053d3f4916cb53291a572a>,void,QmlJSEditor::Internal::QmlJSTextMark * __ptr64>::_Do_call functional                     299  0x7ff952df3893 
      3  QmlJSEditor::Internal::QmlJSTextMark::removedFromEditor                                                                           qmljstextmark.cpp              86   0x7ff952df63c3 
      4  TextEditor::TextBlockUserData::~TextBlockUserData                                                                                 textdocumentlayout.cpp         43   0x7ff95ad91f57 
      5  TextEditor::TextBlockUserData::`vector deleting destructor'                                                                       TextEditor4                         0x7ff95ad259a4 
      6  QTextDocumentPrivate::remove_block                                                                                                qtextdocument_p.cpp            556  0x7ff954526db9 
      7  QTextDocumentPrivate::move                                                                                                        qtextdocument_p.cpp            647  0x7ff954525df5 
      8  QTextDocumentPrivate::remove                                                                                                      qtextdocument_p.cpp            676  0x7ff954526a7c 
      9  QTextCursorPrivate::remove                                                                                                        qtextcursor.cpp                174  0x7ff9545474f3 
      10 QTextCursor::removeSelectedText                                                                                                   qtextcursor.cpp                1655 0x7ff9545475a6 
      11 TextEditor::TextEditorWidget::insertFromMimeData                                                                                  texteditor.cpp                 7650 0x7ff95ad40408 
      12 QWidgetTextControl::paste                                                                                                         qwidgettextcontrol.cpp         953  0x6bd5a1e5     
      13 TextEditor::TextEditorWidget::paste                                                                                               texteditor.cpp                 7477 0x7ff95ad4934f 
      14 std::_Func_impl_no_alloc<<lambda_27e02175a60c6130d6fc999a0160f806>,void,bool>::_Do_call                                           functional                     300  0x7ff95ad59298 
      15 QtPrivate::QFunctorSlotObject<std::function<void __cdecl(bool)>,1,QtPrivate::List<bool>,void>::impl                               qobject_impl.h                 174  0x7ff95ad5ed51 
      16 QMetaObject::activate                                                                                                             qobject.cpp                    3754 0x6c4082a3     
      17 QAction::triggered                                                                                                                moc_qaction.cpp                371  0x6bb8e283     
      18 QMetaObject::activate                                                                                                             qobject.cpp                    3754 0x6c4082a3     
      19 QAction::activate                                                                                                                 qaction.cpp                    1166 0x6bb87f2e     
      20 QAction::event                                                                                                                    qaction.cpp                    1092 0x6bb88c56     
      21 QApplicationPrivate::notify_helper                                                                                                qapplication.cpp               3723 0x6bb98090     
      22 QApplication::notify                                                                                                              qapplication.cpp               3564 0x6bb97047     
      23 QCoreApplication::notifyInternal2                                                                                                 qcoreapplication.cpp           1016 0x6c3e8eb9     
      24 QShortcutMap::dispatchEvent                                                                                                       qshortcutmap.cpp               675  0x7ff954474c26 
      25 QShortcutMap::tryShortcut                                                                                                         qshortcutmap.cpp               354  0x7ff954476583 
      26 QWindowSystemInterface::handleShortcutEvent                                                                                       qwindowsysteminterface.cpp     382  0x7ff954433177 
      27 QGuiApplicationPrivate::processKeyEvent                                                                                           qguiapplication.cpp            2059 0x7ff95444f3cd 
      28 QWindowSystemInterface::sendWindowSystemEvents                                                                                    qwindowsysteminterface.cpp     952  0x7ff9544344f2 
      29 qt_internal_proc                                                                                                                  qeventdispatcher_win.cpp       237  0x6c430b36     
      30 CallWindowProcW                                                                                                                   USER32                              0x7ff99702b85d 
      31 DispatchMessageW                                                                                                                  USER32                              0x7ff99702b1ef 
      32 QEventDispatcherWin32::processEvents                                                                                              qeventdispatcher_win.cpp       635  0x6c43025a     
      33 QWindowsGuiEventDispatcher::processEvents                                                                                         qwindowsguieventdispatcher.cpp 75   0x7ff979e33c69 
      34 QEventLoop::exec                                                                                                                  qeventloop.cpp                 212  0x6c3e4e7b     
      35 QCoreApplication::exec                                                                                                            qcoreapplication.cpp           1289 0x6c3e7e51     
      36 main                                                                                                                              main.cpp                       546  0x7ff6ce437b6c 
      37 WinMain                                                                                                                           qtmain_win.cpp                 104  0x7ff6ce439444 
      38 __scrt_common_main_seh                                                                                                            exe_common.inl                 283  0x7ff6ce438623 
      39 BaseThreadInitThunk                                                                                                               KERNEL32                            0x7ff998e61fe4 
      40 RtlUserThreadStart                                                                                                                ntdll                               0x7ff999b3efc1                                                                                                                                                   
      

      Here's a screenshot from after the crash (while debugging with visual studio):

      Seems to have started happening with 4.6.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            davschul David Schulz
            mitch_curtis Mitch Curtis
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes