QmlJSEditor: fix crash after document reload

Clean up all marks in the document destructor, to prevent accessing
already deleted member in a TextMark callback.

Task-number: QTCREATORBUG-20199
Change-Id: Ica996ea393b9ae636c731f009a6d39552ff35e26
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
Reviewed-by: Marco Benelli <marco.benelli@qt.io>